syntax = "proto3";
package m2.pb;

import "Vec2f.proto";
import "Dim2f.proto";

message Collider {
  Vec2f center_offset_px = 1; // Offset from the center of the sprite
  oneof collider_variant {
    Dim2f rect_dims_px = 11;
    float circ_radius_px = 12;
  }
}
